fixed contrast ratio issue.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3860,7 +3860,7 @@ ol li {
   position: relative;
   float: left;
   font-size: 14px;
-  color: #3F75A5;
+  color: #3a6f9e;
   padding: 0px 15px 0px 25px;
   background: #ededed;
   border-left: #c7c7c7 solid 1px;
